--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
       matrix:
         include: 
         - { os: macOS-13, xcode: '15.0' }
+        - { os: macOS-13, xcode: '14.3' }
         - { os: macos-14, xcode: '15.4.0' }
         - { os: macos-15, xcode: '16.4.0' }
         - { os: macos-15-intel, xcode: '16.4.0' }
